<resources>
    <string name="app_name">FragmentTest1002</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenidos_a_esta_aplicacion">Bienvenidos a esta aplicacion</string>
    <string name="siguiente">Siguiente</string>
    <string name="ingrese_sus_datos_en_los_siguientes_campos">Ingrese sus datos en los siguientes campos</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="ingrese_fecha">Ingrese fecha</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="validar_datos">Validar Datos</string>
    <string name="volver_a_inicio">Volver a Inicio</string>
    <string name="estos_son_los_datos_ingresados">Estos son los datos ingresados</string>
</resources>