<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="128dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="128dp" />

        <TextView
            android:id="@+id/nombre_ds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            app:layout_constraintBottom_toTopOf="@+id/nombre_ingresado_text"
            app:layout_constraintEnd_toEndOf="@+id/nombre_ingresado_text"
            app:layout_constraintStart_toStartOf="@+id/nombre_ingresado_text"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/nombre_ingresado_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/fecha_ds_text"
            app:layout_constraintEnd_toEndOf="@+id/fecha_ds_text"
            app:layout_constraintStart_toStartOf="@+id/fecha_ds_text"
            app:layout_constraintTop_toBottomOf="@+id/nombre_ds_text"
            tools:text="Juana de Arco" />

        <TextView
            android:id="@+id/fecha_ds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fecha_de_nacimiento"
            app:layout_constraintBottom_toTopOf="@+id/fecha_ingresado_text"
            app:layout_constraintEnd_toEndOf="@+id/fecha_ingresado_text"
            app:layout_constraintStart_toStartOf="@+id/fecha_ingresado_text"
            app:layout_constraintTop_toBottomOf="@+id/nombre_ingresado_text" />

        <TextView
            android:id="@+id/fecha_ingresado_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/password_ds_text"
            app:layout_constraintEnd_toEndOf="@+id/password_ds_text"
            app:layout_constraintStart_toStartOf="@+id/password_ds_text"
            app:layout_constraintTop_toBottomOf="@+id/fecha_ds_text"
            tools:text="01.01.2000" />

        <TextView
            android:id="@+id/password_ds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/contrase_a"
            app:layout_constraintBottom_toTopOf="@+id/password_ingresado_text"
            app:layout_constraintEnd_toEndOf="@+id/password_ingresado_text"
            app:layout_constraintStart_toStartOf="@+id/password_ingresado_text"
            app:layout_constraintTop_toBottomOf="@+id/fecha_ingresado_text" />

        <TextView
            android:id="@+id/password_ingresado_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_ds_text"
            tools:text="12345" />

        <Button
            android:id="@+id/volver_inicio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver_a_inicio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/title_ds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estos_son_los_datos_ingresados"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>